--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ log = []
 alloc = ["amplify/alloc"]
 serde = ["dep:serde", "amplify/serde", "strict_encoding/serde"]
 
+tests = [] # Dedicated feature allowing methods used in tests by downstream crates
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 rand = { version = "0.8.4", optional = true }
