--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,13 @@ name = "aluvm-stl"
 required-features = ["stl"]
 
 [dependencies]
-amplify = { version = "~4.8.0", default-features = false, features = ["derive"] }
+amplify = { version = "~4.9.0", default-features = false, features = ["derive"] }
+commit_verify = "0.12.0-rc.1"
+strict_encoding = { version = "~2.9.1", default-features = false, features = ["derive"] }
+strict_types = { version = "~2.9.0", optional = true }
 ascii-armor = { version = "0.9.0", optional = true }
 baid64 = "0.4.1"
-commit_verify = "0.12.0-beta.6"
 paste = "1"
-strict_encoding = { version = "~2.8.2", default-features = false, features = ["derive"] }
-strict_types = { version = "~2.8.3", optional = true }
 serde = { version = "1", optional = true }
 
 [features]
